# BlissNLP

./: .gitignore  ACTIONS.md  Alice in Wonderland Translation Specification.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
book/: .gitignore  template.typ
data/lexicon/: disambiguation_rules.json  idioms.json  neologisms.json  synonyms.json
example/: translprototype.py
scripts/: apply_reviews.py  build_lexicon.py  download_data.py  export_review.py  load_blissfont.py  parse_corpus.py  render_book.py  setup_models.py  translate.py
tests/: test_gold_sample.py  test_integration.py  test_pipeline.py
