[project]
name = "blissnlp"
version = "0.1.0"
description = "Computational translation pipeline mapping English text (Alice in Wonderland) to Blissymbolics using spaCy and the BCI-AV 2025 vocabulary."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "requests>=2.34",
    "spacy>=3.7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
